[project]
name = "terratagger"
version = "0.0.1"
authors = [
  { name="Vytautas Jancauskas", email="vytautas.jancauskas@dlr.de" },
]
description = "An active learning framework for remote sensing"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pytest",
    "click",
    "pdoc",
    "streamlit",
    "watchdog",
    "matplotlib",
    "numpy",
    "pandas",
]

[project.urls]
Homepage = "https://github.com/DLR-MF-DAS/TerraTagger"
Issues = "https://github.com/DLR-MF-DAS/TerraTagger/issues"
